Changed the variables and class names